base-kustomize/envoyproxy-gateway/base/envoy-endpoint-policies.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: least-request-policy
  namespace: envoy-gateway
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-barbican-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-cinder-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-cloudformation-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-glance-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-gnocchi-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-heat-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-keystone-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-magnum-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-metadata-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-neutron-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-nova-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-novnc-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-octavia-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-placement-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: internal-loki-gateway-route
  loadBalancer:
    type: LeastRequest
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: source-ip-policy
  namespace: envoy-gateway
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grafana-gateway-route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: custom-skyline-gateway-route
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: SourceIP
